--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,57 @@
 asgiref==3.5.2
+asttokens==2.2.1
+backcall==0.2.0
 backports.zoneinfo==0.2.1
+certifi==2022.12.7
+charset-normalizer==3.0.1
+comm==0.1.2
+debugpy==1.6.5
+decorator==5.1.1
 Django==4.1.5
 django-cors-headers==3.13.0
+django-request==1.6.2
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
+entrypoints==0.4
+et-xmlfile==1.1.0
+executing==1.2.0
+geojson==2.5.0
+gmaps==0.9.0
+googlemaps==4.7.3
+idna==3.4
+ipykernel==6.20.2
+ipython==8.8.0
+ipywidgets==8.0.4
+jedi==0.18.2
+jupyter-client==7.4.9
+jupyter-core==5.1.3
+jupyterlab-widgets==3.0.5
+matplotlib-inline==0.1.6
+nest-asyncio==1.5.6
+numpy==1.24.1
+openpyxl==3.0.10
+packaging==23.0
+pandas==1.5.3
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+platformdirs==2.6.2
+prompt-toolkit==3.0.36
+psutil==5.9.4
+ptyprocess==0.7.0
+pure-eval==0.2.2
+Pygments==2.14.0
+PyJWT==2.6.0
+python-dateutil==2.8.2
 pytz==2022.7
+pyzmq==25.0.0
+requests==2.28.2
+six==1.16.0
 sqlparse==0.4.3
+stack-data==0.6.2
+tornado==6.2
+traitlets==5.8.1
+urllib3==1.26.14
+wcwidth==0.2.6
+widgetsnbextension==4.0.5
+xlrd==2.0.1
