--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,8 @@ backports.zoneinfo==0.2.1
 certifi==2022.12.7
 charset-normalizer==3.0.1
 comm==0.1.2
+contourpy==1.0.7
+cycler==0.11.0
 debugpy==1.6.5
 decorator==5.1.1
 Django==4.1.5
@@ -15,6 +17,7 @@ djangorestframework-simplejwt==5.2.2
 entrypoints==0.4
 et-xmlfile==1.1.0
 executing==1.2.0
+fonttools==4.38.0
 geojson==2.5.0
 gmaps==0.9.0
 googlemaps==4.7.3
@@ -26,6 +29,8 @@ jedi==0.18.2
 jupyter-client==7.4.9
 jupyter-core==5.1.3
 jupyterlab-widgets==3.0.5
+kiwisolver==1.4.4
+matplotlib==3.6.3
 matplotlib-inline==0.1.6
 nest-asyncio==1.5.6
 numpy==1.24.1
@@ -35,6 +40,7 @@ pandas==1.5.3
 parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
+Pillow==9.4.0
 platformdirs==2.6.2
 prompt-toolkit==3.0.36
 psutil==5.9.4
@@ -42,6 +48,7 @@ ptyprocess==0.7.0
 pure-eval==0.2.2
 Pygments==2.14.0
 PyJWT==2.6.0
+pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2022.7
 pyzmq==25.0.0
