--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,8 @@
     "@chakra-ui/react": "^2.4.9",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@mui/material": "^5.11.5",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.6",
     "@mui/x-data-grid": "^5.17.19",
     "@react-google-maps/api": "^2.17.1",
     "@testing-library/jest-dom": "^5.16.5",
@@ -15,6 +16,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.1.6",
     "axios": "^1.2.3",
+    "framer-motion": "^8.5.4",
     "google-map-react": "^2.2.0",
     "google-maps-react": "^2.0.6",
     "react": "^18.2.0",
