--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -26,13 +26,16 @@ ipykernel==6.20.2
 ipython==8.8.0
 ipywidgets==8.0.4
 jedi==0.18.2
+joblib==1.2.0
 jupyter-client==7.4.9
 jupyter-core==5.1.3
 jupyterlab-widgets==3.0.5
 kiwisolver==1.4.4
+markov-clustering==0.0.6.dev0
 matplotlib==3.6.3
 matplotlib-inline==0.1.6
 nest-asyncio==1.5.6
+networkx==3.0
 numpy==1.24.1
 openpyxl==3.0.10
 packaging==23.0
@@ -50,12 +53,16 @@ Pygments==2.14.0
 PyJWT==2.6.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
+python-louvain==0.16
 pytz==2022.7
 pyzmq==25.0.0
 requests==2.28.2
+scikit-learn==1.2.1
+scipy==1.10.0
 six==1.16.0
 sqlparse==0.4.3
 stack-data==0.6.2
+threadpoolctl==3.1.0
 tornado==6.2
 traitlets==5.8.1
 urllib3==1.26.14
